--- a/sso/package.json
+++ b/sso/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "cookie-parser": "^1.4.4",
     "express": "^4.16.4",
+    "jsonwebtoken": "^8.5.0",
     "nodemon": "^1.18.10"
   }
 }
